--- a/infrastructure/hamburg-jeffconf-com-website-prod.yaml
+++ b/infrastructure/hamburg-jeffconf-com-website-prod.yaml
@@ -119,7 +119,7 @@ Resources:
         Type: CODEPIPELINE
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/eb-nodejs-4.4.6-amazonlinux-64:2.1.3
+        Image: aws/codebuild/nodejs:7.0.0
         Type: LINUX_CONTAINER
         EnvironmentVariables:
           - Name: WEBSITE_BUCKET
