--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "JeffConf Italy @ Milan",
-    "short_name": "JeffConf Milano",
+    "short_name": "JeffConf Hamburg",
     "icons": [
         {
             "src": "\/imgs\/jeff-italy-small.png",
