list myself as an author

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "serverless",
     "website"
   ],
-  "author": "Alex Casalboni",
+  "author": "Alex Casalboni, Soenke Ruempler",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/alexcasalboni/JeffConf-Hamburg/issues"
