make ACM aware of the jeffconf domains

--- a/infrastructure/hamburg-jeffconf-com-website-prod.yaml
+++ b/infrastructure/hamburg-jeffconf-com-website-prod.yaml
@@ -191,4 +191,6 @@ Resources:
       DomainValidationOptions:
         - DomainName: !Ref ApexDomainName
           ValidationDomain: jeffconf.com 
-
+      SubjectAlternativeNames:
+        - jeffconf.com
+        - www.jeffconf.com
